Fetching products from a dummy site fo the websites

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         </div>
 
     </div>
+    <div id="products">
+
+    </div>
 
 
     <div class="musicvid">
@@ -148,7 +151,7 @@
         <div class="email">
         <label for="email"></label>
         <input id="emails" type="text" placeholder="Email address">
-        <img id="send" src="images/send.png" alt="">
+        <!-- <img id="send" src="images/send.png" alt=""> -->
         </div>
 
         <div class="contacts">
@@ -159,6 +162,55 @@
         </div>
 
     </div>
+    <footer>
+        <div class="gadgetsfooter">
+        <div class="gadgets">
+        <h3>Smart <span id="gadge"> Gadgets</span></h3>
+        <p>6392 Elgin St.Celina,Delaware</p>
+        </div>
+        <div class="gadgets">
+            <ul>Corporate sales
+            </ul>
+            <ul>Feedback</ul>
+            <ul>Jobs</ul>
+            <ul>Updates</ul>
+            <ul>Purchase Rules</ul>
+            <ul>For Partners</ul>
+
+        </div>
+        <div class="gadgets">
+            <ul>Corporate sales
+            </ul>
+            <ul>Feedback</ul>
+            <ul>Jobs</ul>
+            <ul>Updates</ul>
+            <ul>Purchase Rules</ul>
+            <ul>For Partners</ul>
+
+        </div>
+        <div class="gadgets">
+            <ul>Corporate sales
+            </ul>
+            <ul>Feedback</ul>
+            <ul>Jobs</ul>
+            <ul>Updates</ul>
+            <ul>Purchase Rules</ul>
+            <ul>For Partners</ul>
+
+        </div>
+        <div class="gadgets">
+            <ul>Corporate sales
+            </ul>
+            <ul>Feedback</ul>
+            <ul>Jobs</ul>
+            <ul>Updates</ul>
+            <ul>Purchase Rules</ul>
+            <ul>For Partners</ul>
+
+        </div>
+        </div>
+    </footer>
+    
     <script src="index.js"></script>
 </body>
 </html>
